--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ body {
     line-height: 1.6;
     color: #2c2c28;
     background-color: #f7f4ef;
+    background-image: url('../images/hieroglyphics-bg.svg');
+    background-repeat: repeat;
+    background-size: 400px 400px;
+    background-attachment: fixed;
 }
 
 /* ===== Typography ===== */
